# CGOcc

./: .gitignore  CMakeLists.txt  ZwischenPräsi.txt  _configure.bat  _open-project.bat  linesRepresentation.txt  start-cmake-gui_vc14.bat
cmake/: FindDevIL.cmake
data/: adaptiveTransparancyPerPixel.frag  basic.frag  basic.vert  depthMask.frag  drawToABufferOnly.frag  edgeDetection.frag  extrudeLines.frag  extrudeLines.geom  extrudeLines.vert  fenceGradient.frag  fenceGradient.geom  fenceHints.frag  fenceHintsCube.geom  fenceHintsLine.geom  footprint.vert  ghostedView.frag  haloLineABuffered.frag  maskingBoxFilterAdaptiveTransparancy.frag  maskingBoxFilterGhostedView.frag  mixByMask.frag  mixEnhancedEdge.frag  outlineHints.frag  screenAlignedQuad.vert  sortABuffer.frag  staticTransparancy.frag
data/shader/: basic.frag  mixByMask.frag
data/shader/additionalEffektShader/: edgeDetection.frag  mixEnhancedEdge.frag
data/shader/helperShader/: clearABuffer.frag  dilation.frag  drawToABufferOnly.frag  drawToABufferTyped.frag  erosion.frag  extrudeLines.geom  fenceGradient.frag  fenceGradient.geom  fenceHintsCube.geom  fenceHintsGeometry.frag  fenceHintsLine.geom  haloLineABuffered.frag  sortABuffer.frag
data/shader/maskShader/: depthMask.frag  depthMask_pseudo.frag  layerdMask.frag  maskingBoxFilterAdaptiveTransparancy.frag
data/shader/visualizationTechniques/: fenceHints.frag  footprint.vert  ghostedView.frag  outlineHints.frag
source/: CMakeLists.txt  MeshLoader.cpp  MeshLoader.h  Painter.cpp  Painter.cpp~RF11e2aaac.TMP  Painter.h  main.cpp
